--- a/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
@@ -34,7 +34,7 @@ image::images/2222.png[]
 | 
 							
 								
-									
+image:images/2190.png[]
 								
 							
 						
@@ -48,7 +48,7 @@ image::images/2222.png[]
 							
 								
 									
-								
+image:images/2191.png[]
 							
 						
 | 
@@ -60,7 +60,7 @@ image::images/2222.png[]
 | 
 							
 								
-									
+image:images/2192.png[]
 								
 							
 						
