--- a/doc-Managing_Infrastructure_and_Inventory/Providers.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Providers.adoc
@@ -31,7 +31,7 @@ image::images/2189.png[]
 | 
 							
 								
-									
+image:images/2190.png[]
 								
 							
 						
@@ -44,7 +44,7 @@ image::images/2189.png[]
 | 
 							
 								
-									
+image:images/2191.png[]
 								
 							
 						
@@ -57,7 +57,7 @@ image::images/2189.png[]
 | 
 							
 								
-									
+image:images/2192.png[]
 								
 							
 						
