--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -51,7 +51,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2138.png[]
 									
 								
 							
@@ -66,7 +66,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2139.png[]
 									
 								
 							
@@ -81,7 +81,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2140.png[]
 									
 								
 							
@@ -96,7 +96,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2141.png[]
 									
 								
 							
@@ -111,7 +111,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2142.png[]
 									
 								
 							
@@ -126,7 +126,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2143.png[]
 									
 								
 							
@@ -141,7 +141,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2144.png[]
 									
 								
 							
@@ -156,7 +156,7 @@ image::images/2137.png[]
 							
 								
 									
-										
+image:images/2145.png[]
 									
 								
 							
