--- a/doc-Managing_Infrastructure_and_Inventory/chap-Clouds.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/chap-Clouds.adoc
@@ -193,7 +193,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2138.png[]
 									
 								
 							
@@ -208,7 +208,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2139.png[]
 									
 								
 							
@@ -223,7 +223,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2140.png[]
 									
 								
 							
@@ -238,7 +238,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2141.png[]
 									
 								
 							
@@ -253,7 +253,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2142.png[]
 									
 								
 							
@@ -268,7 +268,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2143.png[]
 									
 								
 							
@@ -283,7 +283,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2144.png[]
 									
 								
 							
@@ -298,7 +298,7 @@ image::images/3393.png[]
 							
 								
 									
-										
+image:images/2145.png[]
 									
 								
 							
