--- a/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Analyzing_Instances_and_Images.adoc
@@ -14,16 +14,15 @@ To perform a SmartState Analysis, CloudForms Management Engine requires a runnin
 .Restrictions on Displaying Files Collected
 [NOTE]
 ====
-
-
-* .Non-Displayable File TypesFile size bigger than 20k characters 
+.Non-Displayable File Types
+* File size bigger than 20k characters 
 * File with missing name 
 * Non MIME .conf file, with non ascii characters  
 * Non MIME .conf file, without content 				 
 * MIME .exe binary file 					 	 
 
-
-
-* .Displayable File TypesMIME .txt non binary file 
+.Displayable File Types
+* MIME .txt non binary file 
 * Non MIME .conf ascii file 			 	 
 ====
+
