--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_load_a_report_filter_or_search_expression.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_load_a_report_filter_or_search_expression.adoc
@@ -5,9 +5,10 @@
 . Navigate to menu:Infrastructure[Virtual Machines]. 
 . Click the accordion for the items to search either [label]#VMs# or [label]#Templates#. 
 . Click  image:images/2125.png[] btn:[(Advanced Search)] to open the expression editor. 
-. Click btn:[Load]. 
+. Click btn:[Load].
 . Select either a saved virtual machine search or a virtual machine report filter.
-  (Note that the set of items to select will depend on the type of resource you are searching.) 
++
+NOTE: Note that the set of items to select will depend on the type of resource you are searching. 
 +
 
 image::images/2131.png[]
