--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_load_a_report_filter_or_search_expression1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_load_a_report_filter_or_search_expression1.adoc
@@ -5,9 +5,9 @@
 . Hover over [label]#Infrastructure# or [label]#Cloud# and click the page of the type of item to search. 
 . Click  image:images/2306.png[] btn:[(Advanced Search)] to open the expression editor. 
 . Click [label]#Load#. 
-Select either a saved virtual machine search or a virtual machine report filter.
- 
-
-. NOTE: The items you can choose to select depend on the type of resource you are searching for. 			
+. Select either a saved virtual machine search or a virtual machine report filter.
++
+NOTE: The items you can choose to select depend on the type of resource you are searching for.
++
 . Click [label]#Load#. 
 . Click [label]#Apply#. 
