--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_save_a_search.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_save_a_search.adoc
@@ -4,8 +4,7 @@
 .Procedure: To Save a Search
 . Create an Advanced Search expression. 
 . Click [label]#Save#. 
-Type the a name for the search expression in [label]#Save this search as#.
- 
-
-. NOTE: The default title depends on the configuration item you have chosen. 			
+. Type the a name for the search expression in [label]#Save this search as#.
++
+NOTE: The default title depends on the configuration item you have chosen. 			
 . Click [label]#Save#. 
