--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_search_for_infrastructure_items.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_search_for_infrastructure_items.adoc
@@ -8,10 +8,9 @@
   Different options appear based on the chosen criteria. 
 +
 Click [label]#Field# to create criteria based on field values.
- 
++
+image::images/2183.png[]
 
-
-* image::images/2183.png[]					
 * Click [label]#Count of# to create criteria based on the count of something, such as the number of snapshots for a virtual machine, or the number of virtual machines on a host. 
 +
 
