--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_and_compare_genealogy.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_and_compare_genealogy.adoc
@@ -8,4 +8,5 @@
 . From the [label]#Relationships# area in the [label]#Summary#, click btn:[Genealogy]. 
 . Check the items to compare. 
 . Click  image:images/2148.png[] btn:[(Compare Selected VMs)]. 
-. For more information on the [label]#Compare# feature, see <<_sect_comparing_virtual_machines_and_templates,sect-Comparing Virtual Machines and Templates>>. 
+. For more information on the [label]#Compare# feature, see <<_sect_comparing_virtual_machines_and_templates>>. 
+
