--- a/doc-Managing_Infrastructure_and_Inventory/topics/Authenticating_to_Microsoft_SCVMM.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Authenticating_to_Microsoft_SCVMM.adoc
@@ -7,27 +7,35 @@ IMPORTANT: Support for Microsoft SCVMM is in Technology Preview.
 See https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
 
 
-Log in to the Microsoft SCVMM server and enable WinRM for configuration.
- 
+. Log in to the Microsoft SCVMM server and enable WinRM for configuration.
++
 ----
 winrm quick config
-. ----			
-Set the following options:  
+----			
++
+. Set the following options:  
++
 ----
 winrm set winrm/config/client/auth @{Basic="true"}
 winrm set winrm/config/service/auth @{Basic="true"}
 winrm set winrm/config/service @{AllowUnencrypted="true"}
-. ----			
-For Windows 2012 R2 with PowerShell 4.0, use the following syntax to set these options:  
+----			
++
+. For Windows 2012 R2 with PowerShell 4.0, use the following syntax to set these options:  
++
 ----
 winrm set winrm/config/client/auth '@{Basic="true"}'
 winrm set winrm/config/service/auth '@{Basic="true"}'
 winrm set winrm/config/service '@{AllowUnencrypted="true"}'
-. ----			
-Enable remote script execution on the SCVMM server using the +Set-ExecutionPolicy+ cmdlet.
- 
+----			
++
+. Enable remote script execution on the SCVMM server using the +Set-ExecutionPolicy+ cmdlet.
++
 ----
 Set-ExecutionPolicy RemoteSigned
-. ---- For more information on SCVMM remote script execution policies, see http://technet.microsoft.com/en-us/library/ee176961.aspx[Using the Set-ExecutionPolicy Cmdlet]. 
+----
++
+For more information on SCVMM remote script execution policies, see http://technet.microsoft.com/en-us/library/ee176961.aspx[Using the Set-ExecutionPolicy Cmdlet]. 
 
 If PowerShell returns an error, search for [literal]+log_dos_error_results+ in the [path]_evm.log_ and [path]_scvmm.log_ files for information. 
+
