--- a/doc-Managing_Infrastructure_and_Inventory/topics/Enabling_AWS_Config_Notifications.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Enabling_AWS_Config_Notifications.adoc
@@ -17,48 +17,47 @@ See the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/[Contro
 |===
 | 
 						Event
-					
 | 
 						Policies
-					
 | 
 						Refresh
-					
-
+|
+						AWS_EC2_Instance_CREATE
 | 
-						
 							src_vm
-						
-						
+
 							vm_create
-						
-					
-
-
 | 
-						
+						ems
+| 
+						AWS_EC2_Instance_UPDATE
+| 
+						N/A
+| 
+						ems
+| 
+						AWS_EC2_Instance_running
+| 
 							src_vm
-						
-						
+
 							vm_start
-						
-					
-
 | 
-						
-							src_vm
-						
-						
-							vm_power_off
-						
-					
-
+						ems
 | 
-						
+						AWS_EC2_Instance_stopped
+| 
 							src_vm
-						
-						
+
 							vm_power_off
-						
-					
+| 
+						ems
+| 
+						AWS_EC2_Instance_shutting-down
+| 
+							src_vm
+
+							vm_power_off
+| 
+						ems
 |===
+
