--- a/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Installing_VMware_VDDK_on_CloudForms_Management_Engine.adoc
@@ -6,7 +6,7 @@ Execution of SmartState Analysis on virtual machines within a VMware environment
 . Download VDDK 5.5 ([path]_VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz_ at the time of this writing) from the VMware website. 
 +
 NOTE: If you do not already have a login ID to VMware, then you will need to create one.
-At the time of this writing, the file can be found by navigating to menu:[Downloads > All Downloads, Drivers & Tools > VMware vSphere > Drivers & Tools]. Expand [label]#Automation Tools and SDKs#, and select [label]#vSphere Virtual Disk Development Kit 5.5#.
+At the time of this writing, the file can be found by navigating to menu:Downloads[All Downloads, Drivers & Tools > VMware vSphere > Drivers & Tools]. Expand [label]#Automation Tools and SDKs#, and select [label]#vSphere Virtual Disk Development Kit 5.5#.
 Alternatively, find the file by searching for it using the [label]#Search# on the VMware site. 
 
 . Download and copy the [path]_VMware-vix-disklib-5.5.0-1284542.x86_64.tar.gz_ file to the [path]_/root_ directory of the appliance. 
