--- a/doc-Managing_Infrastructure_and_Inventory/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/master.adoc
@@ -24,11 +24,26 @@ include::Virtual_Machines.adoc[]
 include::Resource_Pools.adoc[]
 
 
-
 :leveloffset: 1
 include::Repositories.adoc[]
 
 
 :leveloffset: 1
-include::chap-Clouds.adoc[]
+include::Availability_Zones.adoc[]
+
+
+:leveloffset: 1
+include::Tenants.adoc[]
+
+
+:leveloffset: 1
+include::Flavors.adoc[]
+
+
+:leveloffset: 1
+include::Security_Groups.adoc[]
+
+
+:leveloffset: 1
+include::Instances.adoc[]
 
