--- a/doc-Managing_Providers/Providers.adoc
+++ b/doc-Managing_Providers/Providers.adoc
@@ -1,5 +1,5 @@
 [[_sect_providers1]]
-= Providers
+= Infrastructure Providers
 
 A provider is a server with software to manage multiple virtual machines that reside on multiple hosts.
 menu:Infrastructure[Providers] displays the providers in your environment. 
