Rename PG files

--- a/doc-Managing_Providers/master.adoc
+++ b/doc-Managing_Providers/master.adoc
@@ -9,11 +9,11 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 
 :numbered:
 :leveloffset: 1
-include::Providers.adoc[]
+include::Infrastructure_Providers.adoc[]
 
 
 :leveloffset: 1
-include::sect_providers.adoc[]
+include::Cloud_Providers.adoc[]
 
 
 :leveloffset: 1
