Tweak Infrastructure_Providers ID

--- a/doc-Managing_Providers/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/Infrastructure_Providers.adoc
@@ -1,4 +1,4 @@
-[[_sect_providers1]]
+[[infrastructure_providers]]
 = Infrastructure Providers
 
 A provider is a server with software to manage multiple virtual machines that reside on multiple hosts.
