--- a/doc-General_Configuration_Guide/RH_Access_Insights.adoc
+++ b/doc-General_Configuration_Guide/RH_Access_Insights.adoc
@@ -7,11 +7,11 @@
 Red Hat Access Insights provides an easy to use dashboard that enables system administrators and IT operations managers to quickly identify key risks to stability, security, or performance. A glance at the display allows users to sort by category, view details of the impact and resolution, and then quickly determine what systems are affected.
 
 /////////////////////////////////
-With daily or weekly check ins, Red Hat Access Insights provides a dashboard of what’s happening with your systems . The interface displays specific stability, security, and performance issues in affected systems, and offers clear remediation steps. With that knowledge in hand you can then resolve the critical issue and avoid future impact.
+With daily or weekly check ins, Red Hat Access Insights provides a dashboard of what is happening with your systems. The interface displays specific stability, security, and performance issues in affected systems, and offers clear remediation steps. With that knowledge in hand you can then resolve the critical issue and avoid future impact.
 
 Using over 20,000 solutions from Red Hat Certified Engineers, Red Hat Access Insights does more than traditional security and performance tools that only check for installed packages. By cross referencing data and our knowledge you can know how you might be affected and get a real solution to your problem.
 
-By spending less time on critical interruptions, your team can focus it’s resources on the future and achieving your business goals. As budgets for IT tighten, Red Hat Access Insights acts as a software service to help offload costly and time consuming research periods that can slow down your team.
+By spending less time on critical interruptions, your team can focus its resources on the future and achieving your business goals. As budgets for IT tighten, Red Hat Access Insights acts as a software service to help offload costly and time consuming research periods that can slow down your team.
 /////////////////////////////////
 
 Advantages of Red Hat Access Insights:
@@ -76,6 +76,6 @@ image::RH-access-insights-rules.png[]
 [[rh-insights-systems]]
 === Systems Tab
 
-The Systems tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can fileter the list by using image:RH-access-insights-action.png[image] (`Actions`) for all systems that require actions and image:RH-access-insights-no-action.png[image] (`No Actions`) for all systems that are working without issues and require no actions. You can also filter the list using the  `Groups` dropdown list.
+The Systems tab helps you discover the issues within your system. This tab lists the hostname of the system, the time of last check in and the status. You can filter the list by using image:RH-access-insights-action.png[image] (`Actions`) for all systems that require actions and image:RH-access-insights-no-action.png[image] (`No Actions`) for all systems that are working without issues and require no actions. You can also filter the list using the  `Groups` dropdown list.
 
 image::RH-access-insights-systems.png[]
