Adds configuration for Tenants and Projects

--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -6,7 +6,7 @@ From the +Configuration+ area, you can specify operating parameters for the Clou
 * +Settings+ enable you to modify the configuration of your CloudForms Management Engine infrastructure. You can also create analysis profiles and schedules for these profiles.
 * +Diagnostics+ displays the status of your servers and their roles and provides access to logs.
 
-=== Settings 
+=== Settings
 
 Under +Configure → Configuration+, then in the +Settings+ accordion, you have a hierarchy of the configurable items in your CloudForms Management Engine architecture. At the top level, you have +Settings+ including users, LDAP Groups, account roles, capacity and utilization collection, tag categories, values, and imports, custom variable imports, and license uploads. When you click on +Settings+ and expand it, you can configure +Analysis Profiles+, +Zones+, and +Schedules+.
 
@@ -14,7 +14,7 @@ image:2041.png[]
 
 When you go the +Settings+ area, you are automatically taken to the server list under +Zones+.
 
-==== Regions 
+==== Regions
 
 Use +regions+ for centralizing data which is collected from public and private virtualization environments. A region is ultimately represented as a single database for the VMDB. Regions are particularly useful when multiple geographical locations need to be managed as they enable all the data collection to happen at each particular location and avoids data collection traffic across slow links between networks.
 
@@ -198,15 +198,15 @@ You can import a CSV file with tag assignments into the VMDB. For the import to 
 +
 --------------------
 name,category,entry
-evm2,Provisioning Scope,All 
+evm2,Provisioning Scope,All
 evm2,Exclusions,Do not Analyze
-evm2,EVM Operations,Analysis Successful 
-rhel6,Department,Presales 
+evm2,EVM Operations,Analysis Successful
+rhel6,Department,Presales
 rhel6,Department,Support
 --------------------
 +
 
- 
+
 ====== Importing Tags for a Virtual Machine from a CSV File
 
 To Import Tags for a Virtual Machine from a CSV File:
@@ -628,14 +628,14 @@ To Enable the snmpd and snmptrapd Daemons"
 +
 ------------
 # chkconfig --level 2345 snmpd on
-# chkconfig --level 2345 snmptrapd on  
+# chkconfig --level 2345 snmptrapd on
 ------------
 +
 . The daemons run automatically when the appliance is restarted, but must be started manually now.
 +
 ------------
 # service snmpd start
-# service snmptrapd start  
+# service snmptrapd start
 ------------
 +
 
@@ -1177,33 +1177,33 @@ Table 3.8. collection
 |Parameters|Description
 |ping_depot|Whether to use TCP port ping to the log depot before performing log collection. Default: true
 |ping_depot_timeout|Specify how long in seconds to wait for response from log depot before deciding that the TCP port ping failed. Default: 20
-|current|When collecting logs, specifies what is considered current logging as opposed to archived logging. Default: :pattern: 
+|current|When collecting logs, specifies what is considered current logging as opposed to archived logging. Default: :pattern:
 
-log/\*.log 
+log/\*.log
 
-log/apache/*.log 
+log/apache/*.log
 
-log/\*.txt 
+log/\*.txt
 
-config/* 
+config/*
 
-/var/opt/rh/rh-postgresql94/lib/pgsql/data/\*.conf 
+/var/opt/rh/rh-postgresql94/lib/pgsql/data/\*.conf
 
-/var/opt/rh/rh-postgresql94/lib/pgsql/data/pg_log/* 
+/var/opt/rh/rh-postgresql94/lib/pgsql/data/pg_log/*
 
-/var/log/syslog* 
+/var/log/syslog*
 
-/var/log/daemon.log* 
+/var/log/daemon.log*
 
-/etc/default/ntp* 
+/etc/default/ntp*
 
-/var/log/messages* 
+/var/log/messages*
 
-/var/log/cron* 
+/var/log/cron*
 
-BUILD 
+BUILD
 
-GUID 
+GUID
 
 VERSION
 
@@ -1331,7 +1331,7 @@ Table 3.16. snapshots
 |=======================================================================
 |Parameters|Description
 |create_free_percent|Ensures the % of free space available on the main datastore (datastore where vmx file is located) can support the % growth of the snapshot. The default is to require space for 100% of the provisioned size of all disks that are taking part in the snapshot. A value of 0 means do not check for space before creating the snapshot. Default: 100
-|remove_free_percent|Ensures the % of free space available on the main datastore (datastore where vmx file is located) has the % free space available to support the snapshot deletion process. Note that the deletion process consists of first composing a new snapshot then removing it once the original snapshot to be deleted has been collapsed in the VM. The default is to require 100% of the size of all disks to complete this process. A value of 0 means do not check for space before removing the snapshot. Default: 100 
+|remove_free_percent|Ensures the % of free space available on the main datastore (datastore where vmx file is located) has the % free space available to support the snapshot deletion process. Note that the deletion process consists of first composing a new snapshot then removing it once the original snapshot to be deleted has been collapsed in the VM. The default is to require 100% of the size of all disks to complete this process. A value of 0 means do not check for space before removing the snapshot. Default: 100
 |=======================================================================
 
 
@@ -1385,7 +1385,7 @@ Table: workers
 |duration|Qpid Specific. Length of time (in seconds) the receiver should wait for a message from the Qpid broker before timing out. Default: 10.seconds
 |capacity|Qpid Specific. The total number of messages that can be held locally by the Qpid client before it needs to fetch more messages from the broker. Default: 50.seconds
 |amqp_port|Port used for AMQP. Default: 5672
-|replication_worker:|Performs database replication tasks. Settings for Database Synchronization Server Role. Parameters specified here will override those set in the queue_worker_base:default section. 
+|replication_worker:|Performs database replication tasks. Settings for Database Synchronization Server Role. Parameters specified here will override those set in the queue_worker_base:default section.
 |connection_pool_size|Maximum number of database connections allowed per process. Default: 5
 |memory_threshold|How much memory to allow the worker to grow to before gracefully requesting it to exit and restart. Default: 200.megabytes
 |poll|How often the workers checks for work. This value only is only used when the worker has no more work to do from the queue. It will wait for an amount of time determined by the poll value and poll method. Therefore, if there is constant work on the queue, the worker will not wait in between messages. Default: 60.seconds
@@ -1447,7 +1447,7 @@ Table: workers
 |nice_delta|Tells the worker monitor what Unix "nice" value to assign the workers when starting. A lower number is less nice to other processes. Default: 1
 |poll|How often the workers checks for work. This value only is only used when the worker has no more work to do from the queue. It will wait for an amount of time determined by the poll value and poll method. Therefore, if there is constant work on the queue, the worker will not wait in between messages. Default: 60.seconds
 |queue_worker_base|Base class of all queue workers that work off of the queue..
-|defaults|If the following parameters are NOT explicitly defined for a queue worker, then these values will be used. 
+|defaults|If the following parameters are NOT explicitly defined for a queue worker, then these values will be used.
 |cpu_usage_threshold|How much cpu to allow the worker to grow to before gracefully requesting it to exit and restart. Default: 100.percent
 |queue_timeout|How long a queue message can be worked on before it is considered timed out. Default: 10.minutes
 |memory_threshold|How much memory to allow the worker to grow to before gracefully requesting it to exit and restart. Default: 400.megabytes
@@ -1492,7 +1492,7 @@ Table: workers
 
 ===== Scheduling SmartState Analyses and Backups
 
-From the Schedules area in Settings you can schedule the analyses of virtual machines, hosts, clusters, and datastores to keep the information current. Depending on which resource you want to analyze, you can filter which ones to analyze. You may also specify only one virtual machine or perform an analysis on all virtual machines. In addition, you can schedule compliance checks, and database backups. 
+From the Schedules area in Settings you can schedule the analyses of virtual machines, hosts, clusters, and datastores to keep the information current. Depending on which resource you want to analyze, you can filter which ones to analyze. You may also specify only one virtual machine or perform an analysis on all virtual machines. In addition, you can schedule compliance checks, and database backups.
 
 ====== Scheduling a SmartState Analysis or Compliance Check
 
@@ -1570,7 +1570,51 @@ To Modify a Schedule:
 
 === Access Control
 
-From navigating to Configure → Configuration, then clicking on the Access Control accordion, you have a hierarchy of the configurable items for users, groups, and roles. You can add and modify users, groups, and account roles.
+From navigating to Configure → Configuration, then clicking on the Access Control accordion, you have a hierarchy of the configurable items for users, groups, roles, and tenants. You can add and modify users, groups, account roles, and tenants.
+
+==== Creating a Tenant
+
+To Create a Tenant:
+
+. Navigate to Configure → Configuration.
+. Click on the Access Control accordion, then click Tenants.
+. Click on the top-level Tenant, click image:1847.png[] (Configuration), and image:plus_green.png[] (Add child Tenant to this Tenant) to create a Tenant.
+. Enter a name for the Tenant in the Name field.
+. Enter a description for the Tenant in the Description field.
+. Click Add.
+
+==== Creating a Project
+
+To Create a Project:
+
+. Navigate to Configure → Configuration.
+. Click on the Access Control accordion, then click Tenants.
+. Click on the Tenant where you want to add a Project, click image:1847.png[] (Configuration), and image:plus_green.png[] (Add Project to this Tenant) to create a Project.
+. Enter a name for the Project in the Name field.
+. Enter a description for the Project in the Description field.
+. Click Add.
+
+==== Creating a Project Quota
+
+To Create a Project Quota:
+
+. Navigate to Configure → Configuration.
+. Click on the Access Control accordion, then click Tenants.
+. Click on the Project where you want to add a Quota, click image:1847.png[] (Configuration), and image:plus_green.png[] (Manage Quotas) to create a Quota.
+. In the list of pre-built Quotas, mark the _Enforced_ checkbox next to the Quota item you want to enable.
+. In the Value field, enter the contstraints you want to apply to the Quota.
+. Click Save.
+
+
+==== Tagging Tenants and Projects
+To tag Tenants and Projects:
+
+. Navigate to Configure → Configuration.
+. Click on the Access Control accordion, then click Tenants.
+. In the Tenant or Project entry, click the _Policy_ drop-down menu, and select _Edit 'My Company' Tags for this Tenant_.
+. In the _Tag Assignment_ table, click _Select a customer tag to assign_, and select a tag from the list. In the next column, set a corresponding value.
+. Click Save.
+
 
 ==== Creating a User
 
@@ -1617,6 +1661,7 @@ To Create a User Group:
 . Click image:1847.png[] (Configuration), and image:plus_green.png[] (Add a new Group) to create a group.
 . Enter a name for the group in the Description field. To ensure compatibility with tags, use underscores in place of spaces. For example, Red Hat CloudForms-test_group.
 . Select a role to map to this group.
+. Select the Tenant/Project this group must belong to.
 . Select any filters that you want applied to what this group can view in the Assign Filters area.
 . Check the boxes for the filters you want applied to this user. The items that have changed will show in a bold, blue font.
 . Click the Host & Clusters tab.
@@ -1710,6 +1755,8 @@ If you have enabled Get Role from LDAP under LDAP Settings, then the role is det
 |Security|Enforces security for the virtual environment. Can assign policies to policy profiles, control user accounts, and view all parts of virtual infrastructure. Cannot create policies or perform actions on virtual infrastructure.
 |Super Administrator|Administrator of CloudForms Management Engine and the virtual infrastructure. Can access all functionality and configuration areas.
 |Support|Access to features required by a support department such as diagnostics (logs). Can view all infrastructure items and logs. Cannot perform actions on them.
+|Tenant Administrator|Configures settings applicable to a Tenant. Sets Branding, maps groups/roles, configures LDAP credentials, and configures dashboard settings.
+|Tenant Quota Administrator|Configures quota limits for the tenant, applying usage constraints for CPU, Memory, Storage, Maximum number of VMs, and Maximum number of Templates.
 |User|User of the virtual infrastructure. Can view all virtual infrastructure items. Cannot perform actions on them.
 |User Limited Self Service|Limited User of virtual machines. Can make provision requests. Can access some functions on the virtual machine that the user owns including changing power state.
 |User Self Service|User of virtual machines. Can make provision requests. Can access some functions on the virtual machine that the user owns and that the user's LDAP groups own including changing power state.
@@ -2361,7 +2408,7 @@ To Replicate a Database
 ==== Enabling the Database Synchronization Role
 
 When you start the replication worker, all of the information in the subordinate database is sent to the top region (99). The worker also creates triggers so that future changes made to subordinate regions are
-sent automatically to the top region. 
+sent automatically to the top region.
 
 To Enable the Database Synchronization Role:
 
@@ -2517,19 +2564,19 @@ service evmserverd start
 * To stop the CloudForms Management Engine service, run the following command:
 +
 --------
-service evmserverd stop      
+service evmserverd stop
 --------
 +
 . Run the following command to change the password in the configuration file that emserverd uses to access the server:
 +
 -------
-/var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword  
+/var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword
 -------
 +
 . To restart the CloudForms Management Engine service, run the following command:
 +
 --------
-service evmserverd start  
+service evmserverd start
 --------
 +
 
@@ -2567,4 +2614,3 @@ Replication Worker on the subordinate regions.
 service evmserverd restart
 -----------
 +
-
