Adds tenant procedures

--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -1704,6 +1704,8 @@ This group must be in the LDAP directory source you specified for the Server. Se
 |EvmGroup-user_limited_self_server|User Limited Self Service
 |EvmGroup-user_self_service|User Self Service
 |EvmGroup-vm_user|Vm User
+|EvmRole-tenant_administrator|Tenant Administrator
+|EvmRole-tenant_quota_administrator|Tenant Quota Administrator
 |=======================================================================
 
 . Make each user of your directory service that you want to have access to CloudForms Management Engine a member of one of these groups.
