BZ#1276673-Added information of optional repo for sssd packages as footnote

--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -57,22 +57,22 @@ image:6637.png[]
 The Subscription Management Service you register with will provide your systems with updates and allow additional management.
 ** To register with Red Hat Subscription Management:
 .. In Register to, select +Red Hat Subscription Management+.
-.. Enter +Red Hat Subscription Management Address+. The default is +subscription.rhn.redhat.com+.
-.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+.
+.. Enter +Red Hat Subscription Management Address+. The default is +subscription.rhn.redhat.com+. 
+.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+ footnoteref:[Optional, For installing required sssd packages on base OS RHEL 7.1, subscribe to +rhel-7-server-optional-rpms+ repository.]
 .. To use an HTTP proxy, select +Use HTTP Proxy+.
 .. Enter your Red Hat account information, and click +Validate+.
 .. Click +Save+.
 ** To register with Red Hat Satellite 5:
 .. In Register to, select +Red Hat Satellite 5+.
 .. Enter +Red Hat Satellite 5 Address+. The default is +subscription.rhn.redhat.com+.
-.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+.
+.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+. footnoteref:[Optional]
 .. To use an HTTP proxy, select +Use HTTP Proxy+.
 .. Enter your Red Hat account information, and click +Validate+.
 .. Click +Save+.
 ** To register with Red Hat Satellite 6:
 .. In +Register to+, select +Red Hat Satellite 6+.
 .. Enter Red Hat Satellite 6 Address. The default is +subscription.rhn.redhat.com+.
-.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+.
+.. Enter +Repository Name+. The default is +cf-me-5.5-for-rhel-7-rpms rhel-server-rhscl-7-rpms+. footnoteref:[Optional]
 .. To use an HTTP proxy, select +Use HTTP Proxy+.
 .. Enter your Red Hat account information, and click +Validate+.
 .. Click +Save+.
