--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
@@ -32,6 +32,12 @@ After logging in, you can use the following menu items for advanced configuratio
 * Use +Set Static Network Configuration+ if you have a specific IP address and network settings you need to use for the CloudForms Management Engine Appliance.
 * Use +Test Network Configuration+ to check that name resolution is working correctly.
 * Use +Set Hostname+ to specify a hostname for the CloudForms Management Engine Appliance.
+
+[IMPORTANT]
+=========
+For SmartState analysis to work correctly, a valid fully qualified hostname for the CloudForms Management Engine appliance is mandatorily required.
+=========
+
 * Use +Set Timezone, Date, and Time+ to configure the time zone, date, and time for the CloudForms Management Engine Appliance.
 * Use +Restore Database from Backup+ to restore the VMDB database from a previous backup.
 * Use +Setup Database Region+ to create regions for VMDB replication.
