--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -35,7 +35,7 @@ After logging in, you can use the following menu items for advanced configuratio
 
 [IMPORTANT]
 =========
-For SmartState analysis to work correctly, a valid fully qualified hostname for the CloudForms Management Engine appliance is mandatorily required.
+For SmartState analysis to work correctly, a valid fully qualified hostname for the CloudForms Management Engine appliance, is mandatorily required.
 =========
 
 * Use +Set Timezone, Date, and Time+ to configure the time zone, date, and time for the CloudForms Management Engine Appliance.
