BZ#1217755-Added Information about Web Services option in Authenticating RHEV hosts

--- a/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
@@ -10,7 +10,11 @@ After adding a Red Hat Enterprise Virtualization infrastructure provider, you mu
   You can select all hosts using the [label]#Check All# option. 
 . Click  image:images/1847.png[] btn:[(Configuration)]. 
 . Click  image:images/1851.png[] btn:[(Edit Selected Hosts)]. 
-. In the [label]#Credentials# area, enter administrative credentials in the [label]#Default# tab. 
+. In the [label]#Credentials# area, enter credentials for the following, as required:
+ .. [label]#Default#: This field is mandatory. Users should have privileged access such as, root or administrator. 
+ .. [label]#Remote Login#: Credentials for this field are required if SSH login is disabled for the [label]#Default# account. 
+ .. [label]#Web Services#: This tab is used for access to Web Services in Red Hat Enterprise Virtuaization Manager.
+ .. [label]#IPMI#:  This tab is used for access to IPMI.
 . If editing multiple hosts, select a host from the [label]#Select Host to validate against# drop down. 
 . If required, enter credentials for [label]#Remote Login#, [label]#Web Services#, and [label]#IPMI# in their respective tabs.
   Select the host to validate each of these credentials against. 
